# debai

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.gui  LICENSE  MANIFEST.in  PROJECT_SUMMARY.md  README.md  build-deb.sh  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: release.yml
data/applications/: debai.desktop
data/config/: debai.yaml
data/systemd/: debai.service
debian/: changelog  control  copyright  debai.dirs  debai.manpages  debai.postinst  debai.postrm  rules
docs/: INSTALLATION.md  debai.1
src/debai/: __init__.py
src/debai/cli/: __init__.py  main.py
src/debai/core/: __init__.py  agent.py  model.py  system.py  task.py
src/debai/generators/: __init__.py  compose.py  iso.py  qcow2.py
src/debai/gui/: __init__.py  app.py  main.py
